<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_eventos"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/eventos" />
        <item
            android:id="@+id/nav_Personajes"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/personajes" />
        <item
            android:id="@+id/nav_Comics"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/comics" />
        <item
            android:id="@+id/nav_Series"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/series" />
    </group>

    <item android:title="@string/configuracion">
        <menu>
            <item
                android:id="@+id/nav_conf"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/ajustes" />
        </menu>
    </item>

</menu>